Cambios menores. Futura implementacion de Jparsers

--- a/OgSim.csproj
+++ b/OgSim.csproj
@@ -10,6 +10,8 @@
     <Folder Include="Misc\" />
     <Folder Include="Battle\" />
     <Folder Include="Resources\" />
+    <Folder Include="Misc\Readers\" />
+    <Folder Include="Misc\DataObjects\" />
   </ItemGroup>
 
   <ItemGroup>
